refactor part of codes